Upgraded deps. Switched to Liberica NIK as the default JVM. Added Leyden option.